frontend/test/should_pass/deque_005.grg
using deque_model_001;

rule addToDeque {
	a:A; b:A;
	
	modify {
		eval {
			a.niceDeque = (a.niceDeque + deque<string>] "yeah", a.strval [) + deque<string>] "hey", b.strval [;
			a.spiceDeque = a.spiceDeque + deque<int>] a.val + b.val*2, a.val [ + deque<int>] a.val - b.val*2, b.val [;
		}
		
		eval {
			a.niceDeque = (a.niceDeque + ] "yeah", a.strval [) + ] "hey", b.strval [;
			a.spiceDeque = a.spiceDeque + ] a.val + b.val*2, a.val [ + ] a.val - b.val*2, b.val [;
		}
	}
}
