frontend/test/should_fail/map_005.grg
using map_model_001;

rule wrongKeyType {
	a:A;
	
	modify {
		eval {
			a.intToString = a.intToString \ map<int,string>{ a.stringValue->"" };
		}
	}
}